# viewtouchFork

./: .gitignore  CATCH2_INTEGRATION.md  CMakeLists.txt  EMBOSSED_TEXT_FEATURE.md  README.md  SECURITY.md  TEXT_ENHANCEMENT_FEATURES.md  UNIFIED_TARGETING_SUMMARY.md  basic.hh  changelog.md  conf_file.cc  data_file.cc  data_file.hh  debug.cc  debug.hh  fntrace.cc  fntrace.hh  font_check.cc  font_ids.hh  generic_char.cc  generic_char.hh  h -u origin master  image_data.cc  image_data.hh  inttypes.h  list_utility.hh  logger.cc  logger.hh  remote_link.cc  remote_link.hh  socket.cc  socket.hh  time_info.cc  time_info.hh  utility.cc  utility.hh  version.cmake  version_generated.hh.in  vt_ccq_pipe.cc  vt_ccq_pipe.hh
android/: README.md  viewtouch.patch
cdu/: cdu_main.cc
ci/: Dockerfile.template  travis.sh
cmake/: check_toolchain_definition.cmake  gen_compiler_tag.cmake  gen_target_architecture.cmake  gen_toolchain_definitions.cmake  gen_version_string.cmake  load_git_variables.cmake
docs/: MIGRATION_TO_XFT.md  changelog.md
fonts/: README.md  fonts.conf
loader/: loader_main.cc
main/: account.cc  account.hh  admission.cc  admission.hh  archive.cc  archive.hh  cdu.cc  cdu.hh  cdu_att.cc  cdu_att.hh  chart.cc  chart.hh  check.cc  check.hh  credit.cc  credit.hh  customer.cc  customer.hh  drawer.cc  drawer.hh  employee.cc  employee.hh  exception.cc  exception.hh  expense.cc  expense.hh  inventory.cc  inventory.hh  labels.cc  labels.hh  labor.cc  labor.hh  license_hash.cc  license_hash.hh  locale.cc  locale.hh  manager.cc  manager.hh  printer.cc  printer.hh  (+16 more)
po_file/: viewtouch.po_DE  viewtouch.po_EL  viewtouch.po_EN  viewtouch.po_ES  viewtouch.po_FR  viewtouch.po_GR  viewtouch.po_IT  viewtouch.po_NL  viewtouch.po_PT
print/: print_main.cc
scripts/: Makefile  appproc.pl  arcfix  backup-viewtouch-dat  callcenter-test.pl  callcenter.pl  ccprocess.pl  dat2txt  generic_char.sh  get-latest-bins  getmid.cc  gplreplace.sed  installer  keeprunning  keeprunningcron  lpd-restart  openterm_server.cgi  packagedata.sh  packagerelease  paynow  remote_start  reportdebugs  rotate  runonce  setbuildnum  update-client  update-server.cgi  usercount  vt-tag  vt_backup  vt_data.pl  vt_install  vt_openterm  vt_ping  vt_pingcheck  vt_shutdown  vtbuild  vtclean  vtcommands.pl  vtinst  (+4 more)
term/: layer.cc  layer.hh  term_credit.cc  term_credit.hh  term_credit_cheq.cc  term_credit_cheq.hh  term_credit_mcve.cc  term_credit_mcve.hh  term_dialog.cc  term_dialog.hh  term_main.cc  term_view.cc  term_view.hh  touch_screen.cc  touch_screen.hh
v2/: .gitignore  CMakeLists.txt  EditToolbar.qml  Main.qml  PagePropertiesDialog.qml  README.md  Terminal.qml  Zone.qml  ZonePropertiesDialog.qml  main.cpp
v2/resources/: viewtouch.toml
v2/src/: main.cpp
v2/src/app/: application.cpp  application.hpp  main_window.cpp  main_window.hpp
v2/src/auth/: auth_service.cpp  auth_service.hpp
v2/src/business/: archive.cpp  archive.hpp  check.cpp  check.hpp  customer.cpp  customer.hpp  discount.cpp  discount.hpp  employee.cpp  employee.hpp  exception.cpp  exception.hpp  inventory.cpp  inventory.hpp  labor.cpp  labor.hpp  menu.cpp  menu.hpp  reports.cpp  reports.hpp  sales.cpp  sales.hpp  tax.cpp  tax.hpp  tips.cpp  tips.hpp
v2/src/core/: application.cpp  application.hpp  colors.cpp  colors.hpp  config.cpp  config.hpp  fonts.cpp  fonts.hpp  logger.cpp  logger.hpp  types.hpp
v2/src/data/: check.cpp  check.hpp  employee.cpp  employee.hpp  employee_store.cpp  employee_store.hpp  menu_item.cpp  menu_item.hpp  order.cpp  order.hpp  settings.cpp  settings.hpp
v2/src/editor/: edit_mode.cpp  edit_mode.hpp  edit_toolbar.cpp  edit_toolbar.hpp  page_properties.cpp  page_properties.hpp  zone_properties.cpp  zone_properties.hpp
v2/src/hardware/: cashdrawer.cpp  cashdrawer.hpp  creditcard.cpp  creditcard.hpp  kitchen_display.cpp  kitchen_display.hpp  printer.cpp  printer.hpp
v2/src/network/: http_client.cpp  http_client.hpp
v2/src/render/: renderer.cpp  renderer.hpp  textures.cpp  textures.hpp
v2/src/terminal/: control.cpp  control.hpp  terminal.cpp  terminal.hpp
v2/src/ui/: main_window.cpp  main_window.hpp  page.cpp  page.hpp  property_editor.cpp  property_editor.hpp  theme.cpp  theme.hpp  zone.cpp  zone.hpp
v2/src/zone/: login_zone.cpp  login_zone.hpp  order_zone.cpp  order_zone.hpp  page.cpp  page.hpp  payment_zone.cpp  payment_zone.hpp  table_zone.cpp  table_zone.hpp  zone.cpp  zone.hpp  zone_db.cpp  zone_db.hpp  zone_types.cpp  zone_types.hpp
v2/src/zones/: audit_zone.cpp  audit_zone.hpp  balance_tills_zone.cpp  balance_tills_zone.hpp  button_zone.cpp  button_zone.hpp  login_zone.cpp  login_zone.hpp  manager_reports_zones.cpp  manager_reports_zones.hpp  manager_zone.cpp  manager_zone.hpp  order_zone.cpp  order_zone.hpp  payment_zone.cpp  payment_zone.hpp  report_zone.cpp  report_zone.hpp  settings_zone.cpp  settings_zone.hpp  table_zone.cpp  table_zone.hpp  user_manager_zone.cpp  user_manager_zone.hpp
version/: main_print_version.cc  vt_version_info.cc  vt_version_info.hh
xpm/: black.xpm  blueparchment.xpm  brass-8.xpm  canvas-8.xpm  concrete-8.xpm  copper-8.xpm  darksand-6.xpm  darkwood-10.xpm  demo-converted.xpm  embossed-8.xpm  glass-8.xpm  gradient-8.xpm  gradient-brown.xpm  grass-6.xpm  gray-6.xpm  grayblue-3.xpm  graymarble-12.xpm  grayparchment-8.xpm  greenmarble-12.xpm  greySand.xpm  leather-8.xpm  lighttanparchment-8.xpm  litewood-8.xpm  litsand-6.xpm  metal-8.xpm  parchment-6.xpm  pearl-8.xpm  plastic-8.xpm  redgravel-6.xpm  sand-8.xpm  silk-8.xpm  smoke-4.xpm  smoke-8.xpm  steel-8.xpm  stone-8.xpm  tanparchment-8.xpm  velvet-8.xpm  water-10.xpm  whiteMesh.xpm  wood-10.xpm  (+2 more)
zone/: account_zone.cc  account_zone.hh  button_zone.cc  button_zone.hh  cdu_zone.cc  cdu_zone.hh  chart_zone.cc  chart_zone.hh  check_list_zone.cc  check_list_zone.hh  creditcard_list_zone.cc  creditcard_list_zone.hh  dialog_zone.cc  dialog_zone.hh  drawer_zone.cc  drawer_zone.hh  expense_zone.cc  expense_zone.hh  form_zone.cc  form_zone.hh  hardware_zone.cc  hardware_zone.hh  inventory_zone.cc  inventory_zone.hh  labor_zone.cc  (+37 more)
(+65 files in other folders)
